# PreventMINTEMP

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
extras/: README.txt  preventMINTEMP.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_PreventMINTEMP/: __init__.py
octoprint_PreventMINTEMP/templates/: preventMINTEMP_settings.jinja2
translations/: README.txt
